Sus blocks now are detected when used/fallen